# core-db

./: Dockerfile  pyproject.toml
docs/prompts/: CORE_DB.md
src/core_db/: __init__.py  config.py  main.py  operations.py  pool.py  schemas.py
tests/unit/: test_operations.py
