[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-db"
version = "0.1.0"
description = "DB Manager for Venture Studio Automated"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "asyncpg",
    "alembic",
    "pgvector"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
